cambio en el enlace

--- a/Friendzone/index.html
+++ b/Friendzone/index.html
@@ -23,7 +23,7 @@
     					<b class="name">Created by José Ayllón</b>
 						<a href="https://www.tiktok.com/@joseayllon05?lang=es"><img src="img/tiktok.png" class="img-redes"></a>
 						<a href="https://www.instagram.com/jose05_ayllon/"><img src="img/instagram.png" class="img-redes"></a>
-						<a href=""><img src="img/GitHub-logo.jpg" class="img-redes"></a>
+						<a href="https://github.com/Mauricio-0517/Mauricio-0517.github.io/tree/main/Friendzone"><img src="img/GitHub-logo.jpg" class="img-redes"></a>
     		</div>
   	</footer>
 </body>
