--- a/Presentación Modelo Basado en Componentes/index.html
+++ b/Presentación Modelo Basado en Componentes/index.html
@@ -13,10 +13,9 @@
 		<img src="img/1.png" class="imagen-1">
 	</div>
 	<div class="presentacion">
-		<iframe class="point" src="https://onedrive.live.com/embed?resid=8A85B81AD7386DD6%21105&amp;authkey=%21ACNpOFkc8joLBSc&amp;em=2&amp;wdAr=1.7777777777777777" width="100%" height="50%" frameborder="0">Esto es un documento de <a target="_blank" href="https://office.com">Microsoft Office</a> incrustado con tecnología de <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
-
+		<iframe class="point" src="https://onedrive.live.com/embed?cid=8A85B81AD7386DD6&amp;resid=8A85B81AD7386DD6%21249&amp;authkey=AGoS_WK4GeuYjQU&amp;em=2&amp;wdAr=1.7777777777777777" width="610px" height="367px" frameborder="0">Esto es un documento de <a target="_blank" href="https://office.com">Microsoft Office</a> incrustado con tecnología de <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
 		<iframe class="video-1" width="100%" height="70%" src="https://www.youtube.com/embed/1-2eyS0k-IA?start=69" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		<iframe class="video-2" width="560" height="315" src="https://www.youtube.com/embed/jcOKU9f86XE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe class="video-2" width="100%" height="50%" src="https://www.youtube.com/embed/jcOKU9f86XE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</div>
 	<div class="derecha">
 		<img src="img/2.png" class="imagen-2">
